// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`>>> components/base/serviceOverview.tsx --- Snapshot +++ Should match snapshot 1`] = `
<div
  className="Connect-ServicesOverviewComponent--mar_top_100-1 Connect-ServicesOverviewComponent--mar_bot_50-3"
>
  <div
    className="MuiGrid-container-10"
  >
    <div
      className="MuiGrid-item-11 MuiGrid-grid-xs-12-50 MuiGrid-grid-sm-12-64 MuiGrid-grid-md-8-74 MuiGrid-grid-lg-8-88 MuiGrid-grid-xl-8-102"
    >
      <h1
        className="MuiTypography-root-107 MuiTypography-h1-119 MuiTypography-gutterBottom-134"
      >
        dashboard.main_header
      </h1>
    </div>
    <div
      className="MuiGrid-item-11 MuiGrid-grid-xs-12-50 MuiGrid-grid-sm-12-64 MuiGrid-grid-md-4-70 MuiGrid-grid-lg-4-84 MuiGrid-grid-xl-4-98 Connect-ServicesOverviewComponent--textToRight-6"
    >
      <button
        className="MuiButtonBase-root-170 MuiButton-root-144 MuiButton-contained-155 MuiButton-raised-158 AltinnIconButton-dottedBtn-142"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-145"
        >
          <i
            className="ai ai-circle-plus AltinnIconButton-dottedBtnIcon-143"
          />
          dashboard.new_service
        </span>
        <span
          className="MuiTouchRipple-root-219"
        />
      </button>
    </div>
  </div>
  <p
    className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-gutterBottom-134 Connect-ServicesOverviewComponent--mar_top_50-2 Connect-ServicesOverviewComponent--textSyle-9"
  >
    dashboard.main_subheader
  </p>
  <div
    className="MuiGrid-container-10 Connect-ServicesOverviewComponent--mar_top_50-2"
  >
    <div
      className="MuiGrid-item-11 MuiGrid-grid-xs-12-50 MuiGrid-grid-sm-10-62 MuiGrid-grid-md-10-76 MuiGrid-grid-lg-12-92 MuiGrid-grid-xl-12-106"
    >
      <div
        className="MuiFormControl-root-176 AltinnSearchInput-searchBox-173 MuiFormControl-fullWidth-179"
      >
        <div
          className="MuiFormControl-root-176"
        >
          <div
            className="MuiInputBase-root-193 MuiInput-root-180 AltinnSearchInput-searchBoxInput-174 MuiInputBase-formControl-194 MuiInput-formControl-181 MuiInputBase-adornedStart-197"
            onClick={[Function]}
          >
            <div
              className="MuiInputAdornment-root-210 AltinnSearchInput-searchBoxIcon-175 MuiInputAdornment-positionEnd-213"
            >
              <i
                className="ai ai-search"
              />
            </div>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-203 MuiInput-input-188 MuiInputBase-inputAdornedStart-208"
              disabled={false}
              id="service-search"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="dashboard.search_service"
              required={false}
              type="text"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-item-11 MuiGrid-grid-xs-12-50 MuiGrid-grid-sm-2-54 MuiGrid-grid-md-2-68 MuiGrid-grid-lg-2-82 MuiGrid-grid-xl-2-96"
    >
      <div
        className="MuiChip-root-229 MuiChip-colorPrimary-230 MuiChip-clickable-232 MuiChip-clickableColorPrimary-233 MuiChip-deletable-235 MuiChip-deletableColorPrimary-236 MuiChip-outlined-238 MuiChip-outlinedPrimary-239 Connect-ServicesOverviewComponent--mar_top_20-5 Connect-ServicesOverviewComponent--elementToRigth-8 AltinnFilterChip-chip-226"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          className="MuiChip-label-248"
        >
          dashboard.sorte_services
        </span>
        <i
          className="AltinnFilterChip-down-228 MuiChip-deleteIcon-249 MuiChip-deleteIconOutlinedColorPrimary-252"
          onClick={[Function]}
        />
      </div>
    </div>
    <div
      className="MuiGrid-item-11 MuiGrid-grid-md-12-78 MuiGrid-grid-lg-10-90 MuiGrid-grid-xl-10-104"
    >
      <div
        className="MuiChip-root-229 MuiChip-colorPrimary-230 MuiChip-clickable-232 MuiChip-clickableColorPrimary-233 MuiChip-outlined-238 MuiChip-outlinedPrimary-239 Connect-ServicesOverviewComponent--mar_right_20-4 Connect-ServicesOverviewComponent--mar_top_20-5 AltinnFilterChip-chip-226"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          className="MuiChip-label-248"
        >
          Mons Monsen
        </span>
      </div>
      <div
        className="MuiChip-root-229 MuiChip-colorPrimary-230 MuiChip-clickable-232 MuiChip-clickableColorPrimary-233 MuiChip-outlined-238 MuiChip-outlinedPrimary-239 Connect-ServicesOverviewComponent--mar_right_20-4 Connect-ServicesOverviewComponent--mar_top_20-5 AltinnFilterChip-chip-226 AltinnFilterChip-chipActive-227"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          className="MuiChip-label-248"
        >
          This is the full name of this org
        </span>
      </div>
    </div>
  </div>
  <div
    className="Connect-ServicesOverviewComponent--mar_top_50-2"
  >
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-noWrap-133 MuiTypography-gutterBottom-134 CategoryComponent-displayInlineBlock-215 CategoryComponent-width100-216 CategoryComponent-fontSize_16-218"
      >
        dashboard.category_service_write
      </p>
    </div>
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-alignCenter-130 CategoryComponent-width100-216 CategoryComponent-mar_top_100-214 CategoryComponent-fontSize_24-217"
      >
        dashboard.no_category_service_write
      </p>
    </div>
  </div>
  <div
    className="Connect-ServicesOverviewComponent--mar_top_100-1"
  >
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-noWrap-133 MuiTypography-gutterBottom-134 CategoryComponent-displayInlineBlock-215 CategoryComponent-width100-216 CategoryComponent-fontSize_16-218"
      >
        dashboard.category_service_read
      </p>
    </div>
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-alignCenter-130 CategoryComponent-width100-216 CategoryComponent-mar_top_100-214 CategoryComponent-fontSize_24-217"
      >
        dashboard.no_category_service_read
      </p>
    </div>
  </div>
</div>
`;

exports[`>>> components/base/serviceOverview.tsx --- Snapshot +++ Should match snapshot when empty 1`] = `
<div
  className="Connect-ServicesOverviewComponent--mar_top_100-1 Connect-ServicesOverviewComponent--mar_bot_50-3"
>
  <div
    className="MuiGrid-container-10"
  >
    <div
      className="MuiGrid-item-11 MuiGrid-grid-xs-12-50 MuiGrid-grid-sm-12-64 MuiGrid-grid-md-8-74 MuiGrid-grid-lg-8-88 MuiGrid-grid-xl-8-102"
    >
      <h1
        className="MuiTypography-root-107 MuiTypography-h1-119 MuiTypography-gutterBottom-134"
      >
        dashboard.main_header
      </h1>
    </div>
    <div
      className="MuiGrid-item-11 MuiGrid-grid-xs-12-50 MuiGrid-grid-sm-12-64 MuiGrid-grid-md-4-70 MuiGrid-grid-lg-4-84 MuiGrid-grid-xl-4-98 Connect-ServicesOverviewComponent--textToRight-6"
    >
      <button
        className="MuiButtonBase-root-170 MuiButton-root-144 MuiButton-contained-155 MuiButton-raised-158 AltinnIconButton-dottedBtn-142"
        disabled={false}
        onBlur={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        tabIndex="0"
        type="button"
      >
        <span
          className="MuiButton-label-145"
        >
          <i
            className="ai ai-circle-plus AltinnIconButton-dottedBtnIcon-143"
          />
          dashboard.new_service
        </span>
        <span
          className="MuiTouchRipple-root-219"
        />
      </button>
    </div>
  </div>
  <p
    className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-gutterBottom-134 Connect-ServicesOverviewComponent--mar_top_50-2 Connect-ServicesOverviewComponent--textSyle-9"
  >
    dashboard.main_subheader
  </p>
  <div
    className="MuiGrid-container-10 Connect-ServicesOverviewComponent--mar_top_50-2"
  >
    <div
      className="MuiGrid-item-11 MuiGrid-grid-xs-12-50 MuiGrid-grid-sm-10-62 MuiGrid-grid-md-10-76 MuiGrid-grid-lg-12-92 MuiGrid-grid-xl-12-106"
    >
      <div
        className="MuiFormControl-root-176 AltinnSearchInput-searchBox-173 MuiFormControl-fullWidth-179"
      >
        <div
          className="MuiFormControl-root-176"
        >
          <div
            className="MuiInputBase-root-193 MuiInput-root-180 AltinnSearchInput-searchBoxInput-174 MuiInputBase-formControl-194 MuiInput-formControl-181 MuiInputBase-adornedStart-197"
            onClick={[Function]}
          >
            <div
              className="MuiInputAdornment-root-210 AltinnSearchInput-searchBoxIcon-175 MuiInputAdornment-positionEnd-213"
            >
              <i
                className="ai ai-search"
              />
            </div>
            <input
              aria-invalid={false}
              className="MuiInputBase-input-203 MuiInput-input-188 MuiInputBase-inputAdornedStart-208"
              disabled={false}
              id="service-search"
              onBlur={[Function]}
              onChange={[Function]}
              onFocus={[Function]}
              placeholder="dashboard.search_service"
              required={false}
              type="text"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      className="MuiGrid-item-11 MuiGrid-grid-xs-12-50 MuiGrid-grid-sm-2-54 MuiGrid-grid-md-2-68 MuiGrid-grid-lg-2-82 MuiGrid-grid-xl-2-96"
    >
      <div
        className="MuiChip-root-229 MuiChip-colorPrimary-230 MuiChip-clickable-232 MuiChip-clickableColorPrimary-233 MuiChip-deletable-235 MuiChip-deletableColorPrimary-236 MuiChip-outlined-238 MuiChip-outlinedPrimary-239 Connect-ServicesOverviewComponent--mar_top_20-5 Connect-ServicesOverviewComponent--elementToRigth-8 AltinnFilterChip-chip-226"
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          className="MuiChip-label-248"
        >
          dashboard.sorte_services
        </span>
        <i
          className="AltinnFilterChip-down-228 MuiChip-deleteIcon-249 MuiChip-deleteIconOutlinedColorPrimary-252"
          onClick={[Function]}
        />
      </div>
    </div>
    <div
      className="MuiGrid-item-11 MuiGrid-grid-md-12-78 MuiGrid-grid-lg-10-90 MuiGrid-grid-xl-10-104"
    >
      <div
        className="MuiChip-root-229 MuiChip-colorPrimary-230 MuiChip-clickable-232 MuiChip-clickableColorPrimary-233 MuiChip-outlined-238 MuiChip-outlinedPrimary-239 Connect-ServicesOverviewComponent--mar_right_20-4 Connect-ServicesOverviewComponent--mar_top_20-5 AltinnFilterChip-chip-226"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        role="button"
        tabIndex={0}
      >
        <span
          className="MuiChip-label-248"
        >
          Mons Monsen
        </span>
      </div>
    </div>
  </div>
  <div
    className="Connect-ServicesOverviewComponent--mar_top_50-2"
  >
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-noWrap-133 MuiTypography-gutterBottom-134 CategoryComponent-displayInlineBlock-215 CategoryComponent-width100-216 CategoryComponent-fontSize_16-218"
      >
        dashboard.category_service_write
      </p>
    </div>
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-alignCenter-130 CategoryComponent-width100-216 CategoryComponent-mar_top_100-214 CategoryComponent-fontSize_24-217"
      >
        dashboard.no_category_service_write
      </p>
    </div>
  </div>
  <div
    className="Connect-ServicesOverviewComponent--mar_top_100-1"
  >
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-noWrap-133 MuiTypography-gutterBottom-134 CategoryComponent-displayInlineBlock-215 CategoryComponent-width100-216 CategoryComponent-fontSize_16-218"
      >
        dashboard.category_service_read
      </p>
    </div>
    <div
      className="MuiGrid-container-10"
    >
      <p
        className="MuiTypography-root-107 MuiTypography-body1-116 MuiTypography-alignCenter-130 CategoryComponent-width100-216 CategoryComponent-mar_top_100-214 CategoryComponent-fontSize_24-217"
      >
        dashboard.no_category_service_read
      </p>
    </div>
  </div>
</div>
`;
